# sentiment

./: .env.example  .gitignore  README.md  handoff.md  pyproject.toml
configs/: industries.toml  watchlist.toml
src/altsignal/: __init__.py  cli.py  config.py  http.py  mcp_server.py  models.py  registry.py  store.py
src/altsignal/connectors/: __init__.py  base.py  edgar.py  fred.py  gdelt.py  jobs.py  reddit.py  trends.py  wikipedia.py
src/altsignal/entities/: __init__.py  resolver.py
src/altsignal/features/: __init__.py  align.py  lag.py  stats.py  transforms.py
src/altsignal/reports/: __init__.py  render.py
src/altsignal/workflows/: __init__.py  forecast.py  multifactor.py  refresh.py  report.py  screen.py  triangulate.py
tests/: test_align.py  test_connectors.py  test_edgar_periods.py  test_lag.py  test_mcp_server.py  test_models.py  test_panel.py  test_refresh_report.py  test_stats.py  test_transforms.py
