[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altsignal"
version = "0.1.0"
description = "Build non-proprietary alternative-data signals (Google Trends, SEC filings, web traffic, macro, jobs, sentiment, ...) for a company and turn them into forecastable features."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "altsignal" }]
keywords = ["alternative-data", "alt-data", "google-trends", "sec-edgar", "nowcasting", "forecasting", "signals"]

# Core deps are intentionally PURE-PYTHON only, so the package installs instantly
# on any CPython (including 3.14) with no compiled-wheel dependency. Heavy numeric
# stacks are opt-in extras (see below) and live behind the feature interfaces.
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    # Use the OS certificate store for TLS verification, so corporate
    # MITM proxies with a custom root CA work out of the box.
    "truststore>=0.9; python_version >= '3.10'",
]

[project.optional-dependencies]
# Swap the pure-python numerics for the real stack once you want heavier models.
pandas = ["pandas>=2.2", "numpy>=1.26"]
ml = ["scikit-learn>=1.4", "statsmodels>=0.14"]
# Future: expose connectors/workflows as MCP tools so Claude can drive it.
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
altsignal = "altsignal.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
altsignal = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
